--- a/apriltag_ros/config/tags.yaml
+++ b/apriltag_ros/config/tags.yaml
@@ -19,6 +19,8 @@
 #   ]
 standalone_tags:
   [
+    {id: 3, size: 0.16},
+    {id: 4, size: 0.16}
   ]
 # ## Tag bundle definitions
 # ### Remarks
@@ -41,6 +43,6 @@ standalone_tags:
 #     },
 #     ...
 #   ]
-tag_bundles:
-  [
-  ]
+# tag_bundles:
+#   [
+#   ]
